syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDecimal.proto";

message ObligationCreditor {
    google.protobuf.Int32Value CreditorId = 1;

    string Name = 2;

    google.protobuf.BoolValue IsExternal = 3;
}

message ObligationCorrection {
    google.protobuf.Int32Value CorrectionTypeId = 1;

    cis.types.NullableGrpcDecimal InstallmentAmountCorrection = 2;

    cis.types.NullableGrpcDecimal LoanPrincipalAmountCorrection = 3;

    cis.types.NullableGrpcDecimal CreditCardLimitCorrection = 4;
}